# Generative-AI-Design-Patterns

./: .gitignore  1_1_building_on_apis.ipynb  1_2_agentic_ai.ipynb  1_3_prompt_engineering.ipynb  README.md  notes.txt  pyproject.toml  requirements.txt
