[project]
name = "generative-ai-design-patterns"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aisuite==0.1.11",
    "anthropic>=0.75.0",
    "google-adk>=0.0.1",
    "ipykernel>=7.1.0",
    "ipywidgets>=8.1.8",
    "jinja2>=3.1.6",
    "jupyter-server>=2.17.0",
    "langchain>=1.1.3",
    "markdown>=3.10",
    "matplotlib>=3.10.8",
    "nbclassic>=1.3.3",
    "notebook>=7.5.0",
    "numpy>=2.3.5",
    "openai>=2.11.0",
    "pandas>=2.3.3",
    "pydantic>=2.12.5",
    "pydantic-ai>=0.2.4",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
]
